--- a/src/app/signin/SignInpage.module.css
+++ b/src/app/signin/SignInpage.module.css
@@ -2,19 +2,89 @@
   display: flex;
   justify-content: center;
   height: 100dvh;
-  background-color: black;
+  background-image: url("/background/SignIn.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.container > .centersection {
+@keyframes floatAnimation {
+  0% {
+    transform: translateY(100vh) translateX(0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-10vh) translateX(calc(10vw - 20vw * random()));
+    opacity: 0;
+  }
+}
+
+.floatingSquare {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  opacity: 0;
+  animation: floatAnimation 8s linear infinite;
+  z-index: 1;
+}
+
+.floatingSquare:nth-child(1) {
+  left: 10%;
+  animation-delay: 0s;
+  animation-duration: 6s;
+}
+.floatingSquare:nth-child(2) {
+  left: 30%;
+  animation-delay: 2s;
+  animation-duration: 8s;
+}
+.floatingSquare:nth-child(3) {
+  left: 50%;
+  animation-delay: 4s;
+  animation-duration: 7s;
+}
+.floatingSquare:nth-child(4) {
+  left: 70%;
+  animation-delay: 1s;
+  animation-duration: 9s;
+}
+.floatingSquare:nth-child(5) {
+  left: 90%;
+  animation-delay: 3s;
+  animation-duration: 5s;
+}
+
+.centersection {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 2;
   align-items: center;
 }
 
+@keyframes fadeOpacity {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+}
 .centersection > .logo {
   width: 70vw;
   height: auto;
+  animation: fadeOpacity 4s infinite;
 }
 
 .googleLoginButton {
