--- a/src/app/quest/_component/Problem/Problem.module.css
+++ b/src/app/quest/_component/Problem/Problem.module.css
@@ -18,6 +18,18 @@
   font-size: 20px;
 }
 
+.hideBody {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.lockedImage:hover {
+  cursor: pointer;
+  filter: drop-shadow(0 0 8px red);
+}
+
 .showProblem {
   display: none;
   height: 100%;
