--- a/src/app/quest/Quest.module.css
+++ b/src/app/quest/Quest.module.css
@@ -1,5 +1,3 @@
-/* src/app/quest/Quest.module.css */
-
 .container {
   position: relative;
   height: 100dvh;
@@ -18,16 +16,15 @@
   transform: translateY(-50%);
   width: 1600px;
   height: 1600px;
-  z-index: 10; /* 다른 요소들보다 위에 보이도록 */
+  z-index: 10;
 }
 
 .dragonFly {
   position: absolute;
-  /* 1.3초 동안 왼쪽→오른쪽 이동 */
+  /* 1.5초 동안 왼쪽에서 오른쪽으로 이동 */
   animation: dragonFlight 1.5s linear forwards;
 }
 
-/* 왼쪽 밖에서 오른쪽 밖으로 지나가는 애니메이션 */
 @keyframes dragonFlight {
   0% {
     transform: translateX(-200vw);
@@ -71,34 +68,18 @@
   animation-duration: 6s;
   z-index: 1;
 }
-
 .floatingSquare:nth-child(2) {
   left: 15%;
   animation-delay: 2s;
   animation-duration: 8s;
   z-index: 1;
 }
-
 .floatingSquare:nth-child(3) {
   left: 30%;
   animation-delay: 2s;
   animation-duration: 8s;
   z-index: 1;
 }
-/* 
-.floatingSquare:nth-child(3) {
-  left: 50%;
-  animation-delay: 4s;
-  animation-duration: 7s;
-  z-index: 1;
-}
-
-.floatingSquare:nth-child(4) {
-  left: 65%;
-  animation-delay: 4s;
-  animation-duration: 7s;
-  z-index: 1;
-} */
 
 /* 덮개 영역 */
 .blackcover {
@@ -107,12 +88,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   z-index: 10;
-
   opacity: 0;
   animation: fadeIn 1s ease forwards;
 }
 
-/* 0% → 100%로 서서히 보이는 키프레임 */
 @keyframes fadeIn {
   0% {
     opacity: 0;
