--- a/src/app/quest/_component/QuestSection/QuestSection.module.css
+++ b/src/app/quest/_component/QuestSection/QuestSection.module.css
@@ -48,26 +48,14 @@
 }
 
 .textEditor {
+  max-width: 30dvw;
   z-index: 10;
   height: 100%;
   min-height: 70dvh;
   max-height: 80dvh;
   margin-bottom: 10px;
+  overflow-x: auto;
 }
-
-/* .submitForm > textarea {
-  background-color: rgba(0, 0, 0, 0.5);
-  resize: none;
-  border: none;
-  border-radius: 10px;
-  margin: 10px;
-  min-height: 80dvh;
-} */
-/* 
-.submitForm > textarea:focus {
-  outline: 2px solid red;
-  outline-offset: 2px;
-} */
 
 .correctDiv {
   display: flex;
