--- a/src/app/signin/SignInpage.module.css
+++ b/src/app/signin/SignInpage.module.css
@@ -74,7 +74,7 @@
 
 .buttonSection {
   background-color: rgba(0, 0, 0, 0.5);
-  width: 30dvw;
+  width: 20dvw;
   height: 30dvh;
   border-radius: 10px;
   padding: 10px;
@@ -103,6 +103,7 @@
 .googleLoginButton {
   /* width: 20vw; */
   /* height: auto; */
+  margin: 10px;
   padding: 0;
   border-radius: 50px;
 }
@@ -116,6 +117,7 @@
 }
 
 .guestLoginButton {
+  margin: 10px;
   padding: 0;
   border-radius: 50px;
 }
