✨ Feat: 회원/비회원/로그아웃 상태 기능 구현

--- a/src/app/signin/SignInpage.module.css
+++ b/src/app/signin/SignInpage.module.css
@@ -8,6 +8,15 @@
   background-repeat: no-repeat;
   overflow: hidden;
   position: relative;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+}
+
+.blackcover {
+  display: flex;
+  justify-content: center;
+  min-height: 100dvh;
+  overflow: hidden;
+  position: relative;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
