--- a/src/app/quest/_components/QuestSection/QuestSection.module.css
+++ b/src/app/quest/_components/QuestSection/QuestSection.module.css
@@ -118,3 +118,9 @@
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
+
+.guestWarning {
+  color: red;
+  margin-top: 1dvh;
+  font-weight: bold;
+}
