💄 Design: NPC2 모달 작업

--- a/src/app/lobby/_components/Qna/QnaContent.module.css
+++ b/src/app/lobby/_components/Qna/QnaContent.module.css
@@ -7,3 +7,27 @@
   text-underline-position: below;
   cursor: pointer;
 }
+
+.answerBox {
+  height: 30dvh;
+  overflow-x: auto;
+  padding-right: 5px;
+  margin-bottom: 2dvh;
+}
+
+.answerBox::-webkit-scrollbar {
+  width: 3px;
+}
+
+.answerBox::-webkit-scrollbar-track {
+  background: none;
+}
+
+.answerBox::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 5px;
+}
+
+.asnwerOutput > span {
+  white-space: pre-line;
+}
