--- a/src/components/modal/NeedSignIn/NeedSignInModal.module.css
+++ b/src/components/modal/NeedSignIn/NeedSignInModal.module.css
@@ -14,20 +14,35 @@
 }
 
 .modal {
-  background: rgba(255, 255, 255, 0.9);
+  font-family: var(--font-noto-serif-kr), serif;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.9)
+  );
+  backdrop-filter: blur(2px);
   min-width: 30dvw;
   min-height: 30dvh;
   padding: 20px;
   border-radius: 8px;
   position: relative;
-  color: black;
+  color: white;
+  border: 2px solid rgba(111, 99, 98, 1);
 }
 
 .closeBtn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0.5rem;
+  right: 1rem;
   cursor: pointer;
+  font-family: none;
+  background: none; /* 배경 없앰 */
+  border: none; /* 테두리 없앰 */
+  font-size: 1.5rem;
+  color: #fff; /* 흰색으로 표시 */
+}
+.closeBtn:hover {
+  color: rgba(111, 99, 98, 1);
 }
 
 .modalHeader {
@@ -35,7 +50,7 @@
 }
 
 .modalTitle {
-  color: red;
+  color: rgba(192, 37, 202, 1);
   font-weight: bold;
   font-size: 1.5rem;
   margin-bottom: 5px;
