💄 Design: quest페이지 폰트 수정

--- a/src/app/quest/_components/Problem/Problem.module.css
+++ b/src/app/quest/_components/Problem/Problem.module.css
@@ -34,6 +34,7 @@
 }
 
 .hideBody {
+  font-family: var(--font-noto-serif-kr), serif;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -46,6 +47,7 @@
 }
 
 .showProblem {
+  font-family: var(--font-noto-serif-kr), serif;
   display: none;
   height: 100%;
   padding: 10px;
