--- a/src/components/modal/NeedSignIn/NeedSignInModal.module.css
+++ b/src/components/modal/NeedSignIn/NeedSignInModal.module.css
@@ -11,6 +11,7 @@
   align-items: center;
   z-index: 9999; /* Ensure it's on top */
   pointer-events: auto;
+  animation: fadeIn 0.15s ease-out;
 }
 
 .modal {
@@ -45,14 +46,11 @@
   color: rgba(111, 99, 98, 1);
 }
 
-.modalHeader {
-  margin: 2dvw;
-}
-
 .modalTitle {
+  margin-top: 3dvh;
   color: rgba(192, 37, 202, 1);
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-bottom: 5px;
   text-align: center;
 }
@@ -70,4 +68,13 @@
 .buttonSection {
   display: flex;
   justify-content: space-evenly;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
