--- a/src/app/questmap/_components/RankingModal/RankingModal.module.css
+++ b/src/app/questmap/_components/RankingModal/RankingModal.module.css
@@ -14,25 +14,32 @@
 }
 
 .modal {
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.6),
-    rgba(0, 0, 0, 0.9)
-  );
-  min-width: 500px;
-  padding: 20px;
-  border-radius: 8px;
+  background-image: url("/background/sheet.png");
+  aspect-ratio: 308 / 345;
+  /* 디버깅 용 */
+  /* border: 2px solid red; */
+
+  width: 27dvw;
+
+  padding: 60px;
+  padding-top: 70px;
+  /* border-radius: 8px; */
   position: relative;
-  color: white;
-  border: 2px solid rgba(111, 99, 98, 1);
+  color: black;
+  /* border: 2px solid rgba(111, 99, 98, 1); */
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .closeBtn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0;
+  right: 0;
   font-family: none;
   cursor: pointer;
+  font-size: 2rem;
+  color: white;
 }
 
 .closeBtn:hover {
@@ -53,7 +60,7 @@
 
 .modalContent {
   padding: 10px;
-  min-height: 20dvh;
+  min-height: 28dvh;
   overflow: auto;
   border-radius: 5px;
   background-color: rgba(50, 50, 50, 0.6);
