--- a/src/app/lobby/_components/NoticeBoardModal/NoticeList.module.css
+++ b/src/app/lobby/_components/NoticeBoardModal/NoticeList.module.css
@@ -8,6 +8,24 @@
   flex-direction: row-reverse;
 }
 
+.nothingContainer {
+  background-color: rgba(50, 50, 50, 0.7);
+  border-radius: 10px;
+  border: 2px solid rgba(111, 99, 98, 1);
+  margin: 1rem;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #fff;
+  height: 20dvh;
+  overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2dvh;
+}
+
 .itemsContainer {
   background-color: rgba(50, 50, 50, 0.7);
   border-radius: 10px;
@@ -37,13 +55,11 @@
 .listItem {
   background: rgba(80, 80, 80, 0.7);
   border-radius: 10px;
-  padding: 1rem;
 }
 
 .listItem:hover {
   background: rgba(150, 150, 150, 0.7);
   border-radius: 10px;
-  padding: 1rem;
   cursor: pointer;
 }
 
@@ -57,4 +73,11 @@
 .noticeSub {
   margin-top: 1dvh;
   font-size: 1rem;
+}
+
+.itemButton {
+  text-align: left;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
 }
