--- a/src/app/quest/_components/ResultModal/ResultModal.module.css
+++ b/src/app/quest/_components/ResultModal/ResultModal.module.css
@@ -13,12 +13,21 @@
 }
 
 .modal {
-  background: rgba(50, 50, 50, 0.9);
-  max-width: 500px;
+  font-family: var(--font-noto-serif-kr), serif;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.9)
+  );
+  display: flex;
+  flex-direction: column;
+  backdrop-filter: blur(2px);
+  max-width: 50rem;
   padding: 20px;
   border-radius: 8px;
   position: relative;
   color: white;
+  border: 2px solid rgba(111, 99, 98, 1);
 }
 
 .closeBtn {
@@ -26,6 +35,12 @@
   top: 10px;
   right: 10px;
   cursor: pointer;
+  font-family: none;
+  font-size: 1.4rem;
+}
+
+.closeBtn:hover {
+  color: rgba(111, 99, 98, 1);
 }
 
 .content {
