--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+.custom-scrollbar {
+  /* overflow-y-auto나 .custom-scrollbar가 있는 요소를 대상으로 합니다 */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 7px; /* 스크롤바 너비 */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: none; /* 트랙 배경 */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px; /* 썸(thumb) 둥글게 */
+  background: rgba(65, 240, 185, 0.6); /* 썸 배경색 */
+}
