--- a/src/app/questmap/_components/RankingModal/RankingModal.module.css
+++ b/src/app/questmap/_components/RankingModal/RankingModal.module.css
@@ -1,4 +1,4 @@
-/* Modal.module.css */
+/* RankingModal.module.css */
 .overlay {
   position: fixed;
   top: 0;
@@ -15,20 +15,18 @@
 
 .modal {
   font-family: var(--font-noto-serif-kr), serif;
-  background-image: url("/background/sheet.png");
-  aspect-ratio: 308 / 345;
-  /* 디버깅 용 */
-  /* border: 2px solid red; */
-
-  /* width: 30dvw; */
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.6),
+    rgba(0, 0, 0, 0.9)
+  );
+  width: 35rem;
   height: 40rem;
-
-  padding: 60px;
-  padding-top: 70px;
-  /* border-radius: 8px; */
+  padding: 1.5rem;
+  border-radius: 10px;
   position: relative;
   color: black;
-  /* border: 2px solid rgba(111, 99, 98, 1); */
+  border: 2px solid rgba(111, 99, 98, 1);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -50,8 +48,8 @@
 
 .closeBtn {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 0.5rem;
+  right: 0.7rem;
   font-family: none;
   cursor: pointer;
   font-size: 2rem;
@@ -121,6 +119,7 @@
   border: 2px solid rgba(111, 99, 98, 1);
   border-radius: 8px;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .modalSub {
@@ -136,4 +135,19 @@
   to {
     opacity: 1;
   }
+}
+
+.rankingItemGold {
+  border: 2px solid gold;
+  color: gold;
+}
+
+.rankingItemSilver {
+  border: 2px solid silver;
+  color: silver;
+}
+
+.rankingItemBronze {
+  border: 2px solid #cd7f32; /* 동색 */
+  color: #cd7f32;
 }
