--- a/src/app/typing/typing.module.css
+++ b/src/app/typing/typing.module.css
@@ -2,8 +2,8 @@
   position: absolute;
   background-color: black;
   color: white;
-  min-width: 100dvw;
-  min-height: 100dvh;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 /* 메인 컨테이너 */
@@ -11,7 +11,6 @@
   background-color: black;
   width: 600px;
   margin: auto;
-  margin-top: 150px;
   border: 2px solid #4caf50;
   border-radius: 10px;
   padding: 20px;
