--- a/src/app/typing/typing.module.css
+++ b/src/app/typing/typing.module.css
@@ -51,7 +51,7 @@
 /* 입력 textarea */
 .textareaSection {
   width: 100%;
-  background-color: black;
+  background-color: rgba(100, 100, 100, 0.5);
   color: white;
   border: 1px solid #4caf50;
   font-size: 15px;
@@ -69,7 +69,7 @@
 /* 기록 목록 래퍼 */
 .typingRecords {
   width: 600px;
-  max-height: 500px;
+  max-height: 280px;
   overflow: auto;
   margin: auto;
   margin-top: 20px;
