--- a/src/components/alertModal/AlertModal.module.css
+++ b/src/components/alertModal/AlertModal.module.css
@@ -79,9 +79,10 @@
 
 .yesButton {
   background-color: rgba(15, 190, 135, 0.6);
-  width: 6dvw;
-  height: 4dvh;
+  min-width: 6dvw;
+  min-height: 4dvh;
   border-radius: 10px;
+  padding: 10px;
 }
 
 .yesButton:hover {
@@ -90,9 +91,10 @@
 
 .noButton {
   background-color: rgba(55, 55, 55, 0.6);
-  width: 6dvw;
-  height: 4dvh;
+  min-width: 6dvw;
+  min-height: 4dvh;
   /* padding: 1.3dvh; */
+  padding: 10px;
   border-radius: 10px;
 }
 
