--- a/src/components/gameRuleModal/GameRuleModal.module.css
+++ b/src/components/gameRuleModal/GameRuleModal.module.css
@@ -79,8 +79,9 @@
 
 .yesButton {
   background-color: rgba(15, 190, 135, 0.6);
-  width: 6dvw;
-  height: 4dvh;
+  min-width: 6dvw;
+  min-height: 4dvh;
+  padding: 10px;
   border-radius: 10px;
 }
 
@@ -90,8 +91,9 @@
 
 .noButton {
   background-color: rgba(55, 55, 55, 0.6);
-  width: 6dvw;
-  height: 4dvh;
+  min-width: 6dvw;
+  min-height: 4dvh;
+  padding: 10px;
   /* padding: 1.3dvh; */
   border-radius: 10px;
 }
