--- a/src/app/lobby/_components/NoticeBoardModal/NoticeCreateForm.module.css
+++ b/src/app/lobby/_components/NoticeBoardModal/NoticeCreateForm.module.css
@@ -11,10 +11,14 @@
 
 .writerArea {
   border-radius: 10px;
+  background-color: none;
   background: rgba(200, 200, 200, 0.7);
   border: 2px solid rgba(111, 99, 98, 1);
   color: black;
   font-size: 1.2rem;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  outline: none;
 }
 
 .writerArea::placeholder {
@@ -32,6 +36,7 @@
   color: black;
   resize: none;
   overflow-y: scroll;
+  outline: none;
 }
 
 .textArea::-webkit-scrollbar {
