--- a/src/app/quest/_components/QuestSection/QuestSection.module.css
+++ b/src/app/quest/_components/QuestSection/QuestSection.module.css
@@ -14,7 +14,7 @@
 }
 
 .questHeader {
-  color: red;
+  color: yellow;
   font-size: 2rem;
   display: flex;
 }
@@ -39,6 +39,7 @@
 
 .selectLang {
   background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1.7rem;
   margin: 0 10px;
   margin-bottom: 10px;
 }
@@ -130,11 +131,11 @@
 }
 
 .spinner {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   margin-bottom: 10px; /* 텍스트와 간격 */
-  border: 5px solid #fff; /* 배경색에 맞춰 조정 */
-  border-top: 5px solid red; /* 원하는 색상 */
+  border: 10px solid #fff; /* 배경색에 맞춰 조정 */
+  border-top: 10px solid yellow; /* 원하는 색상 */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
