--- a/src/app/questmap/_components/RankingModal/RankingModal.module.css
+++ b/src/app/questmap/_components/RankingModal/RankingModal.module.css
@@ -25,7 +25,7 @@
   padding: 1.5rem;
   border-radius: 10px;
   position: relative;
-  color: black;
+  color: white;
   border: 2px solid rgba(111, 99, 98, 1);
   background-repeat: no-repeat;
   background-size: contain;
